# self-optimizing-agents

./: .gitignore  CONTAINS_METRIC_IMPLEMENTATION.md  FEEDBACK_IMPLEMENTATION.md  PRODUCTION_SETUP.md  README.md  TIPS.md  build_graph.py  create_dataset.py  docker-compose.yml  eda_fhir_data.ipynb  extract.py  format_json.py  justfile  pyproject.toml  requirements.txt  run.sh
Intro/: readme.gitkeep
baml_src/: extract_fhir.baml
data/: extracted_fhir.json  note.jsonl
src/: .env.example  BAML_INSTRUMENTATION_README.md  CONDITIONAL_OPIK_TRACKING_README.md  GUARDRAILS_README.md  README.md  api_server.py  baml_extract.py  baml_extract_eval.py  baml_instrumentation.py  baml_metadata_extractor.py  baml_request_extractor.py  build_graph.py  concatenate_json.py  debug.py  docker-compose.yml  enhanced_guardrail_integration.py  generate_note_embeddings.py  graphrag.py  guardrail_example.py  guardrail_trace_examples.py  guardrails.py  logging_config.py  opik_utils.py  prompt_optimization.py  rag.py  rag_eval.py  rag_obs_eval.py  run.sh  self_optimizing_agents.py  soa_prompt.py  ui.py  utils.py
src/baml_src/: clients.baml  extract_fhir.baml  graphrag.baml  rag.baml
src/questions/: questions.csv
src/tests/: test_data.py  test_graphrag.py
src/ui/: README.md  package-lock.json  package.json
src/ui/public/: index.html  manifest.json
src/ui/src/: App.css  App.tsx  index.css
src/ui/src/components/: ChatContainer.tsx  ChatMessage.tsx  DebugSidebar.tsx  FeedbackButtons.tsx  FeedbackTest.tsx  GraphVisualizationSidebar.tsx  MessageInput.tsx
src/ui/src/services/: api.ts
(+1 files in other folders)
